# openapi.json
@@ -15,48 +15,11 @@
   },
   "servers": [
     {
-      "url": "localhost:3000/api",
+      "url": "localhost:4000/api",
       "description": "Local server"
     }
   ],
   "paths": {
-    "/v1/auth/login": {
-      "post": {
-        "description": "Login user",
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ResultTTokenDto"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ResultTTokenDto"
-                }
-              }
-            }
-          }
-        },
-        "requestBody": {
-          "description": "Credentials for login",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Credentials"
-              }
-            }
-          }
-        }
-      }
-    },
     "/v1/balance": {
       "post": {
         "description": "Get new balance for a crypto",
@@ -66,17 +29,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResultTTokenDto"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ResultTTokenDto"
+                  "type": "string"
                 }
               }
             }
@@ -103,7 +56,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResultTTokenDto"
+                  "type": "string"
                 }
               }
             }
@@ -113,7 +66,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ResultTTokenDto"
+                  "type": "string"
                 }
               }
             }
@@ -147,128 +100,20 @@
           }
         }
       }
-    },
-    "/v1/users/sign-up": {
-      "post": {
-        "description": "Register a new user",
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Result"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Result"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Result"
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
   "components": {
     "schemas": {
-      "TokenDto": {
-        "type": "object",
-        "properties": {
-          "token": {
-            "type": "string"
-          },
-          "expiresIn": {
-            "type": "number"
-          }
-        }
-      },
-      "ResultTTokenDto": {
-        "type": "object",
-        "properties": {
-          "message": {
-            "type": "string"
-          },
-          "statusCode": {
-            "type": "string"
-          },
-          "error": {
-            "type": "string"
-          },
-          "success": {
-            "type": "boolean"
-          },
-          "data": {
-            "$ref": "#/components/schemas/TokenDto"
-          }
-        }
-      },
-      "Credentials": {
-        "type": "object",
-        "properties": {
-          "email": {
-            "type": "string"
-          },
-          "passwordB64": {
-            "type": "string"
-          }
-        },
-        "required": [
-          "email",
-          "passwordB64"
-        ]
-      },
       "string": {
         "type": "object",
         "properties": {
-          "from": {
-            "type": "string"
-          },
-          "to": {
-            "type": "string"
-          },
-          "fromAmmount": {
+          "ammount": {
             "type": "number"
           }
         },
         "required": [
-          "from",
-          "to",
-          "fromAmmount"
+          "ammount"
         ]
-      },
-      "Result": {
-        "type": "object",
-        "properties": {
-          "message": {
-            "type": "string"
-          },
-          "statusCode": {
-            "type": "string"
-          },
-          "error": {
-            "type": "string"
-          },
-          "success": {
-            "type": "boolean"
-          }
-        }
       }
     }
   }
