# src/adapters/controllers/auth/Auth.controller.ts
@@ -1,123 +1,0 @@
-import { ICredentials } from "../../../application/modules/auth/dtos/Credentials.dto";
-import { TokenDto } from "../../../application/modules/auth/dtos/TokenDto";
-import { IServiceContainer } from "../../shared/kernel";
-import container, { LoginUseCase } from "./container";
-import {
-  TypeDescriber,
-  ResultTDescriber,
-  PropTypeEnum,
-} from "../base/context/apiDoc/TypeDescriber";
-import BaseController, {
-  IRequest,
-  IResponse,
-  INextFunction,
-  EntryPointHandler,
-  IRouter,
-  ServiceContext,
-  HttpContentTypeEnum,
-  HttpMethodEnum,
-  HttpHeaderEnum,
-  applicationStatus,
-  HttpStatusEnum,
-} from "../base/Base.controller";
-
-export class AuthController extends BaseController {
-  constructor(serviceContainer: IServiceContainer) {
-    super(AuthController.name, serviceContainer, ServiceContext.SECURITY);
-  }
-
-  login: EntryPointHandler = async (
-    req: IRequest,
-    res: IResponse,
-    next: INextFunction,
-  ): Promise<void> => {
-    const email = req.body?.email as string;
-    const passwordB64 = req.body?.password as string;
-
-    return this.handleResult(
-      res,
-      next,
-      this.servicesContainer
-        .get<LoginUseCase>(this.CONTEXT, LoginUseCase.name)
-        .execute(req.locale, res.trace, {
-          email,
-          passwordB64,
-        }),
-      { [HttpHeaderEnum.CONTENT_TYPE]: HttpContentTypeEnum.APPLICATION_JSON },
-    );
-  };
-
-  initializeRoutes(router: IRouter): void {
-    this.setRouter(router());
-    this.addRoute({
-      method: HttpMethodEnum.POST,
-      path: "/v1/auth/login",
-      handlers: [this.login],
-      produces: [
-        {
-          applicationStatus: applicationStatus.SUCCESS,
-          httpStatus: HttpStatusEnum.SUCCESS,
-        },
-        {
-          applicationStatus: applicationStatus.UNAUTHORIZED,
-          httpStatus: HttpStatusEnum.UNAUTHORIZED,
-        },
-      ],
-      description: "Login user",
-      apiDoc: {
-        contentType: HttpContentTypeEnum.APPLICATION_JSON,
-        requireAuth: false,
-        schema: new ResultTDescriber<TokenDto>({
-          name: TokenDto.name,
-          type: PropTypeEnum.OBJECT,
-          props: {
-            data: new TypeDescriber<TokenDto>({
-              name: TokenDto.name,
-              type: PropTypeEnum.OBJECT,
-              props: {
-                token: {
-                  type: PropTypeEnum.STRING,
-                },
-                expiresIn: {
-                  type: PropTypeEnum.NUMBER,
-                },
-              },
-            }),
-            error: {
-              type: PropTypeEnum.STRING,
-            },
-            message: {
-              type: PropTypeEnum.STRING,
-            },
-            statusCode: {
-              type: PropTypeEnum.STRING,
-            },
-            success: {
-              type: PropTypeEnum.BOOLEAN,
-            },
-          },
-        }),
-        requestBody: {
-          description: "Credentials for login",
-          contentType: HttpContentTypeEnum.APPLICATION_JSON,
-          schema: new TypeDescriber<ICredentials>({
-            name: "Credentials",
-            type: PropTypeEnum.OBJECT,
-            props: {
-              email: {
-                type: PropTypeEnum.STRING,
-                required: true,
-              },
-              passwordB64: {
-                type: PropTypeEnum.STRING,
-                required: true,
-              },
-            },
-          }),
-        },
-      },
-    });
-  }
-}
-
-export default new AuthController(container);
