# src/adapters/controllers/users/Users.controller.ts
@@ -1,85 +1,0 @@
-import { PropTypeEnum, ResultDescriber } from "../base/context/apiDoc/TypeDescriber";
-import { IUserDto } from "../../../application/modules/users/dtos/User.dto";
-import container, { RegisterUserUseCase } from "./container";
-import { IServiceContainer } from "../../shared/kernel";
-import BaseController, {
-  IRequest,
-  IResponse,
-  INextFunction,
-  EntryPointHandler,
-  IRouter,
-  ServiceContext,
-  HttpContentTypeEnum,
-  HttpMethodEnum,
-  applicationStatus,
-  HttpStatusEnum,
-} from "../base/Base.controller";
-
-export class UsersController extends BaseController {
-  constructor(serviceContainer: IServiceContainer) {
-    super(UsersController.name, serviceContainer, ServiceContext.USERS);
-  }
-
-  singUp: EntryPointHandler = async (
-    req: IRequest,
-    res: IResponse,
-    next: INextFunction,
-  ): Promise<void> => {
-    const userDto = req.body as IUserDto;
-
-    return this.handleResult(
-      res,
-      next,
-      this.servicesContainer
-        .get<RegisterUserUseCase>(this.CONTEXT, RegisterUserUseCase.name)
-        .execute(req.locale, res.trace, userDto),
-    );
-  };
-
-  initializeRoutes(router: IRouter): void {
-    this.setRouter(router());
-    this.addRoute({
-      method: HttpMethodEnum.POST,
-      path: "/v1/users/sign-up",
-      handlers: [this.singUp],
-      produces: [
-        {
-          applicationStatus: applicationStatus.INVALID_INPUT,
-          httpStatus: HttpStatusEnum.BAD_REQUEST,
-        },
-        {
-          applicationStatus: applicationStatus.SUCCESS,
-          httpStatus: HttpStatusEnum.SUCCESS,
-        },
-        {
-          applicationStatus: applicationStatus.UNAUTHORIZED,
-          httpStatus: HttpStatusEnum.UNAUTHORIZED,
-        },
-      ],
-      description: "Register a new user",
-      apiDoc: {
-        contentType: HttpContentTypeEnum.APPLICATION_JSON,
-        requireAuth: false,
-        schema: new ResultDescriber({
-          type: PropTypeEnum.OBJECT,
-          props: {
-            error: {
-              type: PropTypeEnum.STRING,
-            },
-            message: {
-              type: PropTypeEnum.STRING,
-            },
-            statusCode: {
-              type: PropTypeEnum.STRING,
-            },
-            success: {
-              type: PropTypeEnum.BOOLEAN,
-            },
-          },
-        }),
-      },
-    });
-  }
-}
-
-export default new UsersController(container);
