# src/application/modules/auth/dtos/TokenDto.ts
@@ -1,3 +1,0 @@
-export class TokenDto {
-  constructor(public token: string, public expiresIn: number) {}
-}
